# CMatchGroup

./: .clang-format  .clang-tidy  .clangd  .claudeignore  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cmake/: CMatchGroupConfig.cmake.in
docs/specs/cmatch_library/: README.md  config.md  data_structures.md  user_interface.md
docs/specs/cmatch_library/design/: config.md  exception_handling.md  matching_algorithm.md  user_interface.md
docs/specs/cmatch_library/implementation/: README.md  step-01-protobuf-config-data-structures.md  step-02-core-interfaces.md  step-03-ticket-manager-algorithm.md  step-04-user-interface-service.md  step-05-exception-handling-repair.md  step-06-integration-tests-docs.md  todolist.md
docs/specs/cmatch_library/refactor/: 2026-06-28-ticket-manager-refactor.md
docs/superpowers/plans/: 2026-06-28-cmake-library-restructure.md  2026-06-28-cmatch-library-roadmap.md  2026-06-28-ticket-manager-refactor.md
docs/superpowers/specs/: 2026-06-28-cmake-library-restructure-design.md
include/: math_utils.h
proto/: CMakeLists.txt
proto/cmatch/: config.proto  lib.proto  table.proto
src/: CMakeLists.txt  math_utils.cpp
src/cmatch/: CMakeLists.txt  match_group_service_default.cpp  match_group_service_default.h  match_group_service_impl.cpp  match_group_service_impl.h  math_utils.cpp  math_utils.h  season_config_interface.h  ticket_entity_interface.h  ticket_entity_manager_interface.h  ticket_manager.cpp  ticket_manager.h
tests/: CMakeLists.txt  test_math_utils.cpp
tests/cmatch/: CMakeLists.txt  mock_ticket_entity_manager.h  test_cmatch_integration.cpp  test_core_interfaces.cpp  test_exception_handling.cpp  test_match_group_service.cpp  test_protobuf_messages.cpp  test_ticket_manager.cpp
